MAT-4938 : Delete Organization 508 issue fixed. Image alignment corrected.
git-svn-id: svn+ssh://subversion.telligen.com/var/www/html/repos/cmat/trunk/Development/mat@7244 de2f59c9-771b-4d1d-97da-b950f46c8601

Former-commit-id: a9a10cb28b3dc9d02f21e92b27c53e4592ff187b

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -336,7 +336,7 @@ left:50px;
 
 .customDeleteButton {
     background: url("images/trash.png");
-    background-position:centre;
+    background-position:left;
     background-repeat:no-repeat;
     height: 25px;
     width: 30px;
@@ -347,9 +347,8 @@ left:50px;
 
   .customDeleteDisableButton {
     background: url("images/trashDisable.png");
-    background-position:center;
+    background-position:left;
     background-repeat:no-repeat;
-     display: block;
     height: 25px;
     width: 30px;
     border: 0px;
